<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:padding="@dimen/_5sdp"
        android:id="@+id/userDoctor"
        android:orientation="horizontal"
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/viewDivider"
            app:layout_constraintEnd_toStartOf="@id/nextImage"
    >
        <TextView
                android:id="@+id/textUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:ellipsize="end"
                android:fontFamily="@font/ubuntu_medium"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/example_name"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_13ssp"/>

        <TextView
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:ellipsize="end"
                android:text="@string/example_example_com"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/_10ssp"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/nextImage"
        android:src="@drawable/ic_next"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_2sdp"
        android:tint="@color/colorPri"
        app:layout_constraintBottom_toTopOf="@+id/viewDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
            android:id="@+id/viewDivider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@color/colorDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textUserName"
            app:layout_constraintTop_toBottomOf="@+id/textUserName"
            tools:ignore="NotSibling"/>



</androidx.constraintlayout.widget.ConstraintLayout>